force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__Account__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>