force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CustomerAccount__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>