force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__InvoiceOwner__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InvoiceOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Owner</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Subscriptions (Invoice Owner)</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>