force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>