force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubscriptionStartDate__c</fullName>
    <description>The date when the subscription term starts. This is equal to the term start date if the subscription is on its initial term. Otherwise, it is the original term start date if the subscription has renewed.</description>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>