force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__Version__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>